fix: Updated CSS to comply with a11y color contrast standards for reviews page

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #006cb5;
     text-decoration: none;
 }
 
@@ -235,7 +235,7 @@ nav h1 a {
   text-align: center;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #006cb5;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -283,7 +283,7 @@ nav h1 a {
   order: 2;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #006cb5;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
